syntax = "proto3";
package pb;
option go_package = "gim/pkg/protocol/pb";

// 单条消息投递内容（估算大约100个字节）,todo 通知栏提醒
message Message {
  int32 code = 1; // 推送码
  bytes content = 2; // 推送内容
  int64 seq = 3; // 用户消息发送序列号
  int64 send_time = 4; // 消息发送时间戳，精确到毫秒
  MessageStatus status = 5; // 消息状态
}

enum MessageStatus {
  MS_NORMAL = 0; // 正常的
  MS_RECALL = 1; // 撤回
}
